--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>First Assignment</title>
+	<title>New Year 2024</title>
 	<link rel="stylesheet" href="style.css">
+	<style>
+	  background-image:url('New')
+	</style>
 </head>
 <body>
 <main>
-  <nav>
-    Hello! I am osama.
-  </nav>
+  
 </main>
 <body>
   
