--- a/index.html
+++ b/index.html
@@ -6,16 +6,31 @@
 	<title>New Year 2024</title>
 	<link rel="stylesheet" href="style.css">
 	<style>
-	  background-image:url('New')
+	  .text{
+	    font-size:26px;
+	    font-weight: 300;
+	    color: #FFFFFF;
+	    text-align: center;
+   	  padding-top:100px;
+	  }
+	  .partyNewyear{
+	    font-size: 50px;
+	    font-weight: 500;
+	    text-align: center;
+	    color: #EFEFF3;
+	    padding-bottom:40px;
+	  }
 	</style>
 </head>
 <body>
+  <header style="">
+    <h6 class='text'>Happy new year!</h6>
+    <h1 class="partyNewyear">New Year Party <br> Celebration</h1>
+    
+  </header>
 <main>
   
 </main>
-<body>
-  
-</body>
 <footer>
   
 </footer>
