--- a/index.html
+++ b/index.html
@@ -6,30 +6,62 @@
 	<title>New Year 2024</title>
 	<link rel="stylesheet" href="style.css">
 	<style>
+	.party{
+	  
+	  font-size: 50px;
+	  color: white;
+	  font-weight: 500;
+	}
+	.percent{
+	  color:red;
+	  font-size: 100px;
+	  font-weight: 500;
+	}
 	  .text{
-	    font-size:26px;
-	    font-weight: 300;
+	    font-size:35px;
+	    font-weight: 400;
 	    color: #FFFFFF;
 	    text-align: center;
-   	  padding-top:100px;
+   	  padding-top:130px;
 	  }
 	  .partyNewyear{
-	    font-size: 50px;
+	    font-size: 60px;
 	    font-weight: 500;
 	    text-align: center;
 	    color: #EFEFF3;
-	    padding-bottom:40px;
+	    padding-bottom:60px;
 	  }
 	</style>
 </head>
 <body>
   <header style="">
-    <h6 class='text'>Happy new year!</h6>
+    <p class='text'>Happy new year!</p>
     <h1 class="partyNewyear">New Year Party <br> Celebration</h1>
-    
   </header>
 <main>
-  
+  <div style="text-align: center">
+    <p>
+    <span class="percent">65% OFF</span> <br>
+    <span style="color:red;">OUR HOLIDAY DEALS ARE BETTER</span>
+    <p style="font-weight: 900; font-size: 40px">ALL CATEGORIES</p>
+    <img class="photo1" src="/New Year Photo.png" alt="new year celebration photo">
+    </p>
+  </div>
+<div style="margin: 30px" class="mid-part">
+  <div>
+  <div>
+    <span class="party">Welcome to <br>midnight party </span>
+    <p style="color: white; font-weight: 300">
+      Join our midnight party on 31 night.The party will be hosted by a <br> local our most famous rapper DJ KALU KHAN.
+    </p>
+      
+  </div>
+    <button class="btn">
+      Join Now
+    </button>
+  </div>
+  <img class="image2" src="/Group 70.png" alt="">
+</div>
 </main>
 <footer>
   
