--- a/index.html
+++ b/index.html
@@ -33,13 +33,15 @@
 	  }
 	</style>
 </head>
+
+
 <body>
   <header style="">
     <p class='text'>Happy new year!</p>
     <h1 class="partyNewyear">New Year Party <br> Celebration</h1>
   </header>
 <main>
-  <div style="text-align: center">
+  <div style="text-align: center; margin-bottom: 40px">
     <p>
     <span class="percent">65% OFF</span> <br>
     <span style="color:red;">OUR HOLIDAY DEALS ARE BETTER</span>
@@ -47,7 +49,7 @@
     <img class="photo1" src="/New Year Photo.png" alt="new year celebration photo">
     </p>
   </div>
-<div style="margin: 30px" class="mid-part">
+<div class="mid-part">
   <div>
   <div>
     <span class="party">Welcome to <br>midnight party </span>
@@ -56,12 +58,31 @@
     </p>
       
   </div>
-    <button class="btn">
-      Join Now
-    </button>
+    <a class="btn" href='https://www.w3schools.com/tags/att_img_width.asp'>Join Now</a>
   </div>
   <img class="image2" src="/Group 70.png" alt="">
 </div>
+<div style="background-image: linear-gradient(pink, white)" class="btn2">
+  <div>
+    <p class="text2">
+      <span style="color: red">Place:</span>New Park hotel
+   </p>
+    <p class="text2">
+      <span style="color: red" >
+      Date: 
+      </span>31th December Night 2023
+    </p>
+    <p class="text2">
+      <span style="color: red">
+      Time:
+      </span> Evening 7:30pm to 12:30am
+    </p>
+    <button id="btn" type="submit">
+      Join Now
+    </button>
+  </div>
+</div>
+
 </main>
 <footer>
   
