--- a/index.html
+++ b/index.html
@@ -82,7 +82,21 @@
     </button>
   </div>
 </div>
-
+<div class="offer">
+  <div>
+    <p>New Best Offer</p>
+    <h1>Comming soon</h1>
+    
+  </div>
+  <div class="img4">
+    <img src="/Ellipse 1.png" alt="">
+  </div>
+  <div>
+    <h1>2024</h1>
+    <p></p>
+    <img class="img3" src="/Group 96.png" alt="">
+  </div>
+</div>
 </main>
 <footer>
   
