--- a/index.html
+++ b/index.html
@@ -83,18 +83,18 @@
   </div>
 </div>
 <div class="offer">
-  <div>
-    <p>New Best Offer</p>
+  <div style="margin:20px 30px">
+    <h5 style="color:red;">New Best Offer</h5>
     <h1>Comming soon</h1>
-    
+    <p>Our best offers are coming soon with best products and with best quality. Our products are diversified. New style with new design.</p>
   </div>
-  <div class="img4">
-    <img src="/Ellipse 1.png" alt="">
+  <div style="margin-right:20px">
+    <img class="img4" src="/Ellipse 1.png" width="200"  height="200px"  alt="">
   </div>
-  <div>
-    <h1>2024</h1>
-    <p></p>
-    <img class="img3" src="/Group 96.png" alt="">
+  <div style="padding:20px 0px 40px 30px ">
+    <h1 style="color: red;">2024</h1>
+    <p>Happy New Year <br>best greetings for new year.</p>
+    <img width="80px" height="70px" src="/Group 96.png" alt="">
   </div>
 </div>
 </main>
