--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
 
 <body>
+  <div class="mar">
+
   <header style="">
     <p class='text'>Happy new year!</p>
     <h1 class="partyNewyear">New Year Party <br> Celebration</h1>
@@ -86,20 +88,74 @@
   <div style="margin:20px 30px">
     <h5 style="color:red;">New Best Offer</h5>
     <h1>Comming soon</h1>
-    <p>Our best offers are coming soon with best products and with best quality. Our products are diversified. New style with new design.</p>
+    <p class="txt">Our best offers are coming soon with best products and with best quality. Our products are diversified. New style with new design.</p>
   </div>
   <div style="margin-right:20px">
     <img class="img4" src="/Ellipse 1.png" width="200"  height="200px"  alt="">
   </div>
   <div style="padding:20px 0px 40px 30px ">
     <h1 style="color: red;">2024</h1>
-    <p>Happy New Year <br>best greetings for new year.</p>
+    <p class="txt">Happy New Year best greetings for new year.</p>
     <img width="80px" height="70px" src="/Group 96.png" alt="">
   </div>
 </div>
+<div style="text-align: center; margin: 100px 100px">
+  <h1>What is functional</h1>
+  <h1 class="holiday"><span style="color: red">Holidays</span> Sale 50%</h1>
+  <p class="txt">Holiday bamper offer.You will get bamper offers in this holiday. There will be 50% off in every products. and you will get best quality accessories.</p>
+</div>
+<div style="margin: 80px 300px 20px 0;">
+  <h3 style="color: red;">THE BEST GIFTS</h3>
+  <p style=" font-weight: 600; font-size: 60px;">Our Awesome Portfolio</p>
+  <p class="txt">Our best regards with best gifts.Stay with us in this upcoming new year.There will be best offers for best brand.</p>
+</div>
+<div style="display: flex">
+  <img width="270px" height="270px" src="/Rectangle 3.png" alt="">
+  <img style="margin:0 10px" height="270px"  width="270px"  src="/Rectangle 4.png" alt="">
+  <img height="270px" width="270px" src="/Rectangle 5.png" alt="">
+</div>
+<div style="display: flex;margin-top:10px " >
+  <img width="270px" height="270px" src="/Rectangle 6 (1).png" alt="">
+   <img style="margin: 0px 10px;" height="270px" width="270px" src="/Rectangle 7.png" alt="">
+  <img width="270px" height="270px" src="/Rectangle 8.png" alt="">
+</div>
+<div class="bottomPart">
+  <img style="margin-top: 40px;" src="/Group 61.png" alt="">
+  <h1 style="font-size: 50px">Subscribe Newsletter</h1>
+<p class="txt" style="margin: 10px 200px">Subscribe our channel for latest news and updates.Our products rate you will got there.Your subscription is inspiration.</p>
+  <input class="input" type="text" placeholder="user@gmail.com">
+  <a class="btn3" href="">Subscribe</a>
+</div>
 </main>
-<footer>
-  
+  </div>
+
+<footer style="background-color: black;">
+  <div style="display: flex;">
+    <div style="margin-left: 100px">
+      <h3 class="txt">big building ruseveltstreet</h3>
+      <h3 class="txt">beach garden Florida 33446PA</h3>
+    </div>
+    <div class="call">
+      <div class="footer"  style="display: flex">
+        <img style="margin:20px " width="20px" height="20px" src="/Call.png" alt="">
+        <h3 class="txt">+00088753788</h3>
+      </div>
+      <div style="display: flex">
+        <img style="padding: 20px" width="20px" height="20px" src="/Website.png" alt="">
+        <h3 class="txt">www.website.com</h3>
+      </div>
+    </div>
+  </div>
+  <div style="text-align: center">
+    <img src="/Twitter.png" alt="">
+    <img src="/Facebook.png" alt="">
+    <img src="/Instagram.png" alt="">
+    <img src="/Linkedin.png" alt="">
+  </div>
+<div style="display: flex; justify-content: space-between; padding: 30px;">
+    <p class="txt">2024, All right reserved</p>
+    <p class="txt">Unsubscribe</p>
+  </div>
 </footer>
 </body>
 </html>
